[tool.poetry]
name = "join-map"
version = "0.1.0"
description = ""
authors = ["jose_sn <zeneto1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2.9"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
